feat(backoffice): Tour optimisation map
