# backend/tour/src/main/resources/openapi.yaml
@@ -1315,6 +1315,16 @@ components:
           format: double
           nullable: true
           description: Cost of the chosen hub last-mile; null if mode=DIRECT
+        latitude:
+          type: number
+          format: double
+          nullable: true
+          description: Geocoded stop location (for mapping purposes); null if not geocoded
+        longitude:
+          type: number
+          format: double
+          nullable: true
+          description: Geocoded stop location (for mapping purposes); null if not geocoded
 
     OptimizationProducerHubTransfer:
       type: object
